src/test/ui/parser/use-as-where-use-ends-with-mod-sep.stderr
error: expected identifier, found keyword `as`
  --> $DIR/use-as-where-use-ends-with-mod-sep.rs:1:16
   |
LL | use std::any:: as foo;
   |                ^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | use std::any:: r#as foo;
   |                ^^^^

error: expected one of `::`, `;`, or `as`, found `foo`
  --> $DIR/use-as-where-use-ends-with-mod-sep.rs:1:19
   |
LL | use std::any:: as foo;
   |                   ^^^ expected one of `::`, `;`, or `as` here

error: aborting due to 2 previous errors

